# semantic-rs

./: .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  LICENSE  Makefile  README.md  README_PRISTINE.md  RELEASING.md  VERSIONING.md  releaserc.toml
.cargo/: config
.ci/: boot_wine_env.sh
.circleci/: config.yml
.docker/: Dockerfile
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
grammar/: dataflow.pest
src/: asset.rs  cargo.rs  changelog.rs  commit_analyzer.rs  config.rs  error.rs  git.rs  git_client.rs  git_history.rs  github.rs  kernel.rs  logger.rs  main.rs  old_main.rs  preflight.rs  toml_file.rs  utils.rs
src/builtin_plugins/: clog.rs  docker.rs  early_exit.rs  git.rs  github.rs  mod.rs  rust.rs
src/plugin/: discovery.rs  dispatcher.rs  mod.rs  proto.rs  resolver.rs  starter.rs  traits.rs
src/plugin/proto/: mod.rs  request.rs  response.rs
src/plugin_runtime/: data_mgr.rs  discovery.rs  graph.rs  kernel.rs  mod.rs  resolver.rs  starter.rs
src/plugin_support/: keys.rs  mod.rs  traits.rs
src/plugin_support/flow/: kv.rs  mod.rs
src/plugin_support/proto/: mod.rs  response.rs
tests/: git_history_test.rs  toml_file_test.rs
tests/integration/: integration.bats  run-locally.sh
tests/integration/fixtures/broken-cargo-toml/_git/: index
tests/integration/fixtures/dry-run/: _Cargo.toml
tests/integration/fixtures/dry-run/_git/: COMMIT_EDITMSG
tests/integration/fixtures/env-vars/_git/: ORIG_HEAD  index
tests/integration/fixtures/env-vars/_git/logs/: HEAD
tests/integration/fixtures/has-no-remote/: Cargo.toml
tests/integration/fixtures/has-no-remote/_git/: index
tests/integration/fixtures/initial-release/_git/: COMMIT_EDITMSG  ORIG_HEAD  index
tests/integration/fixtures/initial-release/_git/logs/: HEAD
tests/integration/fixtures/malformed-tag/_git/: COMMIT_EDITMSG  ORIG_HEAD  index  tags
tests/integration/fixtures/malformed-tag/_git/logs/: HEAD
tests/integration/fixtures/new-tag/_git/: ORIG_HEAD  index
tests/integration/fixtures/new-tag/_git/logs/: HEAD
tests/integration/fixtures/next-minor/: _Cargo.toml
tests/integration/fixtures/next-minor/_git/: COMMIT_EDITMSG
tests/integration/fixtures/next-minor/src/: lib.rs
tests/integration/fixtures/no-bump/_git/: index
tests/integration/fixtures/not-a-repo/: _Cargo.toml
tests/integration/fixtures/write-mode-disabled/_git/: ORIG_HEAD  index
tests/integration/fixtures/write-mode/_git/: COMMIT_EDITMSG  index  tags
tests/integration/fixtures/wrong-branch/_git/: COMMIT_EDITMSG  index
(+17 files in other folders)
