[package]
name = "semantic-rs"
version = "1.0.0"
authors = ["Jan Schulte <hello@unexpected-co.de>", "Jan-Erik Rediger <janerik@fnordig.de>", "Mike Lubinets <me@mkl.dev>"]
description = "Automatic crate publishing"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term = "0.2"
toml = "0.1"
regex = "0.1"
semver = "0.9.0"
rustc-serialize = "0.3.16"
git2 = "0.7.5"
clog = "0.9.1"
hubcaps = "0.3"
hyper = "0.10"
url = "1.2"
env_logger = "0.6.2"
hyper-native-tls = "0.2.2"
clap = "2.32.0"
log = "0.4.6"

[features]
default = []
